[tool.poetry]
name = "pyparse"
version = "0.1.0"
description = ""
authors = ["Stulta-Amiko <phh01010312@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
configparse = "^0.1.5"
requests = "^2.31.0"
bs4 = "^0.0.2"
pandas = "^2.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
